--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ flutter:
       android:
         package: com.lazycatlabs.media_scanner
         pluginClass: MediaScannerPlugin
+      
+      ios:
+        pluginClass: MediaScannerPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
